fixed padding and removed excess spacing

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -67,7 +67,7 @@ h1, .header {
       color: white;
       padding: 10px;
       text-decoration: none;
-      font-size: 4em;
+      font-size: 3em;
       line-height: 25px;
       text-shadow: 1px 1px #000000;
       opacity: 0.75;
@@ -94,12 +94,11 @@ h1, .header {
     text-align: center;
     color: white;
     text-shadow: 1.5px 1.5px #000000;
-    font-size: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     h1 {
-      font-size: 5rem;
+      font-size: 3rem;
       margin-bottom: 2em;
     }
     h2 {
@@ -124,8 +123,9 @@ h1, .header {
   background-color: $color-2;
   min-height: 100%;
   display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   h1 {
     font-size: 5rem;
@@ -158,7 +158,7 @@ h1, .header {
 
 .about-me {
   background-color: $color-3;
-  min-height:100%;
+  min-height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -186,8 +186,9 @@ h1, .header {
 }
 
 .contact {
-  background-color: lighten($color-3, 1%);
-  min-height: 30%;
+  background-color: $color-3;
+  min-height: 50%;
+  padding-bottom: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
